--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     implementation 'org.koin:koin-android:2.1.1'
     implementation 'org.koin:koin-android-viewmodel:2.0.0-rc-2'
     implementation 'org.koin:koin-androidx-scope:2.1.1'
+    // Firebase
+    implementation 'com.google.firebase:firebase-database:19.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.0'
 }
+apply plugin: 'com.google.gms.google-services'
